Include VM arguments for easy copy & paste.